--- a/physical-order-meta/src/main/resources/application.yml
+++ b/physical-order-meta/src/main/resources/application.yml
@@ -65,6 +65,15 @@ hystrix:
           thread:
             timeoutInMilliseconds: 10000
 
+security:
+  oauth2:
+    resource:
+      jwt:
+        key-uri: http://localhost:10402/oauth/token_key #获取解析jwt，验签名key的路径
+    client:
+      client-id: orderService #获取验签key需要身份认证，这里是订单的clientId
+      client-secret: 123456 #获取验签key需要身份认证，这里是网关的secret
+
 #这样才能访问 /actuator/bus-refresh
 management:
   endpoints:
