使用 spring session 实现session共享

--- a/auth-server-authentication/pom.xml
+++ b/auth-server-authentication/pom.xml
@@ -42,6 +42,12 @@
             <artifactId>spring-cloud-starter-security</artifactId>
         </dependency>
 
+        <!--spring session redis-->
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-data-redis</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
