--- a/auth-server-authentication/src/main/resources/bootstrap-local.yml
+++ b/auth-server-authentication/src/main/resources/bootstrap-local.yml
@@ -24,7 +24,12 @@ spring:
     port: ${RABBIT_MQ_PORT:5672}
     username: ${RABBIT_MQ_USERNAME:guest}
     password: ${RABBIT_MQ_PASSWORD:guest}
-
+  redis:
+    host: ${REDIS_HOST:localhost}
+    port: ${REDIS_PORT:6379}
+    lettuce:
+      pool:
+        max-active: 300
   zipkin:
     base-url: http://localhost:9411
     sender:
