--- a/auth-server-authentication/src/main/resources/bootstrap-local.yml
+++ b/auth-server-authentication/src/main/resources/bootstrap-local.yml
@@ -34,3 +34,6 @@ spring:
     base-url: http://localhost:9411
     sender:
       type: rabbit
+  sleuth:
+    sampler:
+      probability: 1.0 #采样比例
