--- a/auth-server-authentication/pom.xml
+++ b/auth-server-authentication/pom.xml
@@ -19,6 +19,11 @@
             <version>2.0-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
         <!--配置中心客户端-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
