--- a/auth-client-github/src/main/resources/bootstrap-docker.yml
+++ b/auth-client-github/src/main/resources/bootstrap-docker.yml
@@ -20,13 +20,12 @@ spring:
       trace:
         enabled: true #开启消息跟踪
   rabbitmq:
-    host: ${RABBIT_MQ_HOST:101.37.202.3}
+    host: ${RABBIT_MQ_HOST:localhost}
     port: ${RABBIT_MQ_PORT:5672}
     username: ${RABBIT_MQ_USERNAME:guest}
     password: ${RABBIT_MQ_PASSWORD:guest}
 
   zipkin:
-#    base-url: http://101.37.202.3:9411
     enabled: true
     sender:
       type: rabbit
