--- a/auth-server-authentication/src/main/resources/bootstrap-local.yml
+++ b/auth-server-authentication/src/main/resources/bootstrap-local.yml
@@ -33,6 +33,7 @@ spring:
     timeout: 2000
   zipkin:
     base-url: http://localhost:9411
+    enabled: true
     sender:
       type: rabbit
   sleuth:
