--- a/physical-order-meta/src/main/resources/application.yml
+++ b/physical-order-meta/src/main/resources/application.yml
@@ -69,7 +69,7 @@ security:
   oauth2:
     resource:
       jwt:
-        key-uri: http://localhost:10402/oauth/token_key #获取解析jwt，验签名key的路径
+        key-uri: http://${AUTHENTICATION_HOST:localhost}:${AUTHENTICATION_PORT:10402}/oauth/token_key #获取解析jwt，验签名key的路径
     client:
       client-id: orderService #获取验签key需要身份认证，这里是订单的clientId
       client-secret: 123456 #获取验签key需要身份认证，这里是网关的secret
