--- a/physical-order-meta/src/main/resources/bootstrap-docker.yml
+++ b/physical-order-meta/src/main/resources/bootstrap-docker.yml
@@ -3,9 +3,6 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://${EUREKA_ZONE_HOST:localhost}:${EUREKA_ZONE_PORT:10101}/eureka/
-  instance:
-    prefer-ip-address: true
-    instance-id: ${spring.cloud.client.ip-address}:${spring.application.name}:${server.port}
 
 spring:
   cloud:
@@ -20,13 +17,12 @@ spring:
       trace:
         enabled: true #开启消息跟踪
   rabbitmq:
-    host: ${RABBIT_MQ_HOST:101.37.202.3}
+    host: ${RABBIT_MQ_HOST:localhost}
     port: ${RABBIT_MQ_PORT:5672}
     username: ${RABBIT_MQ_USERNAME:guest}
     password: ${RABBIT_MQ_PASSWORD:guest}
 
   zipkin:
-#    base-url: http://101.37.202.3:9411
     enabled: true
     sender:
       type: rabbit
