--- a/auth-server-authentication/src/main/resources/bootstrap.yml
+++ b/auth-server-authentication/src/main/resources/bootstrap.yml
@@ -3,13 +3,16 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://${EUREKA_ZONE_HOST:localhost}:${EUREKA_ZONE_PORT:10101}/eureka/
+  instance:
+    prefer-ip-address: true
+    instance-id: ${spring.cloud.client.ip-address}:${spring.application.name}:${server.port}
 
 spring:
   cloud:
     config:
       label: master
-      name: book
-      profile: dev
+      name: authentication
+      profile: docker
       discovery:
         enabled: true
         serviceId: core-server-config
@@ -23,16 +26,32 @@ spring:
     password: ${RABBIT_MQ_PASSWORD:guest}
   redis:
     host: ${REDIS_HOST:localhost}
-    port: ${REDIS_PORT:6379}
-    password: ${REDIS_PASSWORD:}
+    port: ${REDIS_PORT:6380}
+    password: ${REDIS_PASSWORD:123456}
     lettuce:
       pool:
+        ##最大连接数
         max-active: 300
+        ##连接的最大等待阻塞的时间
+        max-wait: 10000
+        ##最大和最小空闲连接
+        max-idle: 4
+        min-idle: 0
+      #关闭时的超时时间
+      shutdown-timeout: 4000
+    ##连接超时的时间
     timeout: 2000
   zipkin:
+    base-url: http://localhost:9411
     enabled: true
     sender:
       type: rabbit
   sleuth:
     sampler:
       probability: 1.0 #采样比例
+
+redis:
+  cache:
+    database: 0
+  session:
+    database: 1
