--- a/auth-client-github/src/main/docker/Dockerfile
+++ b/auth-client-github/src/main/docker/Dockerfile
@@ -7,4 +7,4 @@ ADD auth-client-github.jar app.jar
 # 开放 10405 端⼝
 EXPOSE 10405
 # 配置容器启动后执⾏的命令,-c为清除以前启动的数据
-ENTRYPOINT ["java","-jar","/app.jar","--spring.profiles.active=local","-c"]
+ENTRYPOINT ["java","-jar","/app.jar"]
