--- a/physical-order-meta/src/main/docker/Dockerfile
+++ b/physical-order-meta/src/main/docker/Dockerfile
@@ -7,4 +7,4 @@ ADD physical-order-meta.jar app.jar
 # 开放 10404 端⼝
 EXPOSE 10404
 # 配置容器启动后执⾏的命令,-c为清除以前启动的数据
-ENTRYPOINT ["java","-jar","/app.jar","--spring.profiles.active=docker","-c"]
+ENTRYPOINT ["java","-jar","/app.jar"]
