--- a/auth-server-authentication/src/main/resources/bootstrap.yml
+++ b/auth-server-authentication/src/main/resources/bootstrap.yml
@@ -26,7 +26,7 @@ spring:
     password: ${RABBIT_MQ_PASSWORD:guest}
   redis:
     host: ${REDIS_HOST:localhost}
-    port: ${REDIS_PORT:6380}
+    port: ${REDIS_PORT:6379}
     password: ${REDIS_PASSWORD:123456}
     jedis:
       pool:
@@ -40,7 +40,7 @@ spring:
     ##连接超时的时间
     timeout: 2000
   zipkin:
-    base-url: http://localhost:9411
+#    base-url: http://localhost:9411
     enabled: true
     sender:
       type: rabbit
