--- a/physical-order-meta/src/main/resources/bootstrap.yml
+++ b/physical-order-meta/src/main/resources/bootstrap.yml
@@ -11,8 +11,8 @@ spring:
   cloud:
     config:
       label: master
-      name: book
-      profile: dev
+      name: order
+      profile: docker
       discovery:
         enabled: true
         serviceId: core-server-config
@@ -20,13 +20,13 @@ spring:
       trace:
         enabled: true #开启消息跟踪
   rabbitmq:
-    host: ${RABBIT_MQ_HOST:101.37.202.3}
+    host: ${RABBIT_MQ_HOST:localhost}
     port: ${RABBIT_MQ_PORT:5672}
     username: ${RABBIT_MQ_USERNAME:guest}
     password: ${RABBIT_MQ_PASSWORD:guest}
 
   zipkin:
-#    base-url: http://101.37.202.3:9411
+#    base-url: http://localhost:9411
     enabled: true
     sender:
       type: rabbit
