--- a/auth-client-github/src/main/resources/bootstrap.yml
+++ b/auth-client-github/src/main/resources/bootstrap.yml
@@ -11,7 +11,7 @@ spring:
   cloud:
     config:
       label: master
-      name: auth-github
+      name: authGithub
       profile: docker
       discovery:
         enabled: true
