--- a/auth-server-authentication/pom.xml
+++ b/auth-server-authentication/pom.xml
@@ -14,9 +14,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.github.yahaweili</groupId>
+            <groupId>com.gitee.ynding</groupId>
             <artifactId>common-model</artifactId>
-            <version>2.0-SNAPSHOT</version>
+            <version>v2.0.1</version>
         </dependency>
 
         <!--配置中心客户端-->
@@ -106,6 +106,10 @@
                         </resource>
                     </resources>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
